# -fourth-form-signal

./: .env.example  .gitignore  inspect_artifacts.py  inspect_runs.py  pyproject.toml
.github/workflows/: ci.yml
Diagnostics/phase2_phase3_demand_repair_design/: integerisation_floor_masking_review.csv  phase2_phase3_demand_repair_design_memo.md  phase2_phase3_repair_sequence.csv  phase2_phase3_risk_review.csv  remaining_demand_cap_points.csv  stage11_forecast_cap_trace.csv  trainer_predicted_units_total_trace.csv
Diagnostics/phase4_raw_model_flatness_diagnostic/: cross_promotion_raw_flatness_store772.csv  feature_missingness_for_flat_cohort.csv  feature_variance_for_flat_cohort.csv  flat_prediction_cohort_profile.csv  flatness_by_supplier_category_promo_type.csv  model_artifact_trace.csv  phase4_raw_model_flatness_memo.md  phase4_repair_recommendation.csv  raw_model_flatness_summary.csv  raw_model_vs_feature_signal_review.csv  target_definition_review.csv  train_predict_schema_alignment.csv
Diagnostics/phase4b10_action_overrun_diagnosis/: buy_threshold_scenario_comparison.csv  order_cap_scenario_comparison.csv  overrun_by_buy_change_type.csv  overrun_by_supplier_category_promo_type.csv  overrun_by_target_quality_and_repair_basis.csv  overrun_realized_exceeds_stock_basis_split.csv  phase4b10_action_overrun_diagnosis_memo.md  shadow_stock_basis_overrun_breakdown.csv  tiny_demand_buy_root_cause.csv  (+1 more)
scripts/: find_latest_promotion_review.sh  promotions.sh  run_promotions_e2e_operator.sh  run_tests.sh
src/: __init__.py
tests/: __init__.py
(+1542 files in other folders)
