[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fourth-form-signal"
version = "0.1.0"
description = "First shared control-plane skeleton for the Fourth Form Signal platform."
requires-python = ">=3.12"
dependencies = [
	"joblib>=1.4",
	"lightgbm>=4.5",
	"openpyxl>=3.1",
	"pandas>=2.2",
	"pyarrow>=16.1",
	"pyodbc>=5.1",
	"python-dotenv>=1.0",
	"scikit-learn>=1.5",
	"sqlalchemy>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
